Add personal branding

--- a/client/layouts/HomeLayout.html
+++ b/client/layouts/HomeLayout.html
@@ -21,7 +21,7 @@
         </div>
         <div class="card-example">
             <div class="card">
-                <h2>Welcome to Smart Flash Cards</h2>
+                <h2>These are smart flash cards</h2>
                 <p>
                     What is the equation to find the slope?
                 </p>
@@ -33,6 +33,14 @@
                     <i class="fa fa-arrow-right"></i>
                 </div>
             </div>
+        </div>
+        <!-- Personal Branding -->
+        <div class="twitter-btn">
+            <a href="https://twitter.com/Dotolo2" class="twitter-follow-button" data-show-count="false">Follow @Dotolo2</a>
+            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+        </div>
+        <div class="by">
+            <span>by Dylan Dotolo</span>
         </div>
     </main>
 
