--- a/css/style.sass
+++ b/css/style.sass
@@ -145,7 +145,7 @@ h2
         font:
             font-family: $main
             weight: 300
-            size: 1.5rem
+            size: 2rem
     span
         opacity: 0
         font-size: 2rem
@@ -167,3 +167,21 @@ h2
     #nextCard
         bottom: 10px
         right: 10px
+.by
+    right: 0
+    bottom: 0
+    background-color: #1695e7
+    color: #fff
+    position: fixed
+    font-weight: 500
+    z-index: 99
+    border-top-left-radius: 0.2em
+    padding: 0.5em
+    font:
+        family: $main
+        size: 1.4rem
+.twitter-btn
+    position: fixed
+    right: 15%
+    bottom: 0
+    z-index: 99
