--- a/css/style.css
+++ b/css/style.css
@@ -40,18 +40,9 @@ h2 {
   background-position: center;
   height: 25vh;
   position: relative;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center; }
+  align-items: center;
+  justify-content: center; }
   .main-header .button {
     position: absolute;
     font-size: 1.2rem;
@@ -95,34 +86,16 @@ h2 {
   border-color: #85A4CE; }
 
 .loginWrapper {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
   position: absolute; }
 
 .intro-block {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
   display: flex;
   height: 20vh;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
   background-color: #85A4CE;
   text-align: center;
   padding: 20px; }
@@ -140,24 +113,11 @@ h2 {
   max-width: 800px; }
 
 .card-example {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: row;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  flex-direction: row;
   height: 50%;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center; }
+  align-items: center;
+  justify-content: center; }
 
 .card {
   position: relative;
@@ -166,19 +126,9 @@ h2 {
   max-width: 800px;
   height: 300px;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
-      -ms-flex-direction: column;
-          flex-direction: column; }
+  align-items: center;
+  flex-direction: column; }
   .card h2 {
     text-align: center;
     font-family: "Open Sans", sans-serif;
@@ -188,7 +138,7 @@ h2 {
     text-align: center;
     font-font-family: "Open Sans", sans-serif;
     font-weight: 300;
-    font-size: 1.5rem; }
+    font-size: 2rem; }
   .card span {
     opacity: 0;
     font-size: 2rem;
@@ -201,7 +151,6 @@ h2 {
     font-size: 1.4rem;
     color: #fff; }
     .card .button:hover {
-      -webkit-transition: all ease-in-out 0.3s;
       transition: all ease-in-out 0.3s;
       background-color: rgba(155, 232, 147, 0.8);
       color: #000; }
@@ -211,3 +160,22 @@ h2 {
   .card #nextCard {
     bottom: 10px;
     right: 10px; }
+
+.by {
+  right: 0;
+  bottom: 0;
+  background-color: #1695e7;
+  color: #fff;
+  position: fixed;
+  font-weight: 500;
+  z-index: 99;
+  border-top-left-radius: 0.2em;
+  padding: 0.5em;
+  font-family: "Open Sans", sans-serif;
+  font-size: 1.4rem; }
+
+.twitter-btn {
+  position: fixed;
+  right: 15%;
+  bottom: 0;
+  z-index: 99; }
