added hover effects and fab button

--- a/client/partials/UserHome.html
+++ b/client/partials/UserHome.html
@@ -6,11 +6,18 @@
         <h1>Study Smart</h1>
     </header>
     <div class="card-wrapper">
-        <div class="card">
+        <div class="card-intro-deck">
             <h2>Marketing Final Exam</h2>
         </div>
-        <div class="card">
+        <div class="card-intro-deck">
             <h2>Accounting Exam 1</h2>
         </div>
+        <div class="card-intro-deck">
+            <h2>Biology Quiz</h2>
+        </div>
+    </div>
+    <!-- fab button to add decks -->
+    <div class="fab">
+        <i class="fa fa-plus"></i>
     </div>
 </template>
