--- a/css/style.sass
+++ b/css/style.sass
@@ -74,6 +74,7 @@ h2
     height: 10vh !important
     background-color: $primary !important
     background-image: none
+    box-shadow: 2px 2px 5px $shadow
 .hide
     display: none
 .show
@@ -127,7 +128,7 @@ h2
     height: 50%
     align-items: center
     justify-content: center
-.card
+.card, .card-intro-deck
     position: relative
     width: 80%
     padding: 10px
@@ -170,6 +171,15 @@ h2
     #nextCard
         bottom: 10px
         right: 10px
+.card-intro-deck
+    display: flex
+    justify-content: center
+    align-items: center
+    margin: 10px
+    transition: all 0.4s ease
+    &:hover
+        background-color: rgba($primary, 0.5)
+        box-shadow: 4px 4px 20px $shadow
 .by
     right: 0
     bottom: 0
@@ -189,8 +199,26 @@ h2
     bottom: 0
     z-index: 99
 .card-wrapper
-    margin: 5%
+    padding: 5%
+    width: 100%
     display: flex
     flex-direction: row
     align-items: center
     justify-content: center
+.fab
+    position: absolute
+    right: 40px
+    bottom: 40px
+    display: flex
+    align-items: center
+    justify-content: center
+    background-color: $accent
+    border-radius: 50%
+    height: 50px
+    width: 50px
+    box-shadow: 2px 2px 5px $shadow
+    transition: all 0.2s ease
+    &:hover
+        background-color: rgba($accent, 0.8)
+        box-shadow: 2px 2px 15px $shadow
+        color: rgba($black, 0.8) !important
