--- a/client/partials/UserHome.html
+++ b/client/partials/UserHome.html
@@ -1,23 +1,10 @@
 <template name="UserHome">
-    <header class="header">
-        <div class="button" id="login">
-            {{> loginButtons}}
-        </div>
-        <h1>Study Smart</h1>
-    </header>
     <div class="card-wrapper">
-        <div class="card-intro-deck">
-            <h2>Marketing Final Exam</h2>
-        </div>
-        <div class="card-intro-deck">
-            <h2>Accounting Exam 1</h2>
-        </div>
-        <div class="card-intro-deck">
-            <h2>Biology Quiz</h2>
-        </div>
+
     </div>
     <!-- fab button to add decks -->
     <div class="fab">
         <i class="fa fa-plus"></i>
     </div>
+    {{> NewDeck}}
 </template>
