Added hover effects to decks and started layout for individual card views for questions and answers

--- a/client/layouts/DeckSingle.html
+++ b/client/layouts/DeckSingle.html
@@ -1,15 +1,4 @@
 <template name="DeckSingle">
-    <article class="card-intro-deck">
-        <h2>{{name}}</h2>
-        <p>
-            {{desc}}
-        </p>
-        <p>
-            {{#each terms}}
-                <span class="term">
-                    {{name}} - {{desc}}
-                </span>
-            {{/each}}
-        </p>
-    </article>
+    <h1>Boom</h1>
+    {{flashcard.name}}
 </template>
