--- a/css/style.css
+++ b/css/style.css
@@ -167,6 +167,8 @@ h2 {
 
 .card, .card-intro-deck {
   position: relative;
+  cursor: pointer;
+  overflow: hidden;
   width: 80%;
   padding: 10px;
   max-width: 800px;
@@ -211,10 +213,35 @@ h2 {
       transition: all ease-in-out 0.3s;
       background-color: rgba(155, 232, 147, 0.8);
       color: #000; }
-  .card #viewCard, .card-intro-deck #viewCard {
+
+.card-intro-deck i {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  border-radius: 50%;
+  background: #fff;
+  padding-left: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  font-size: 4rem;
+  color: #9BE893;
+  text-align: center;
+  width: 60px;
+  height: 60px;
+  line-height: 60px;
+  -webkit-transform: translate(-50%, -50%) scale(0);
+          transform: translate(-50%, -50%) scale(0);
+  -webkit-transition: all 300ms 0ms cubic-bezier(0.6, -0.28, 0.735, 0.045);
+  transition: all 300ms 0ms cubic-bezier(0.6, -0.28, 0.735, 0.045); }
+
+.card-intro-deck:hover i {
+  -webkit-transform: translate(-50%, -50%) scale(1);
+          transform: translate(-50%, -50%) scale(1);
+  -webkit-transition: all 300ms 100ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  transition: all 300ms 100ms cubic-bezier(0.175, 0.885, 0.32, 1.275); }
+  .card-intro-deck:hover i #viewCard {
     bottom: 10px;
     right: 60px; }
-  .card #nextCard, .card-intro-deck #nextCard {
+  .card-intro-deck:hover i #nextCard {
     bottom: 10px;
     right: 10px; }
 
