--- a/css/style.sass
+++ b/css/style.sass
@@ -130,6 +130,8 @@ h2
     justify-content: center
 .card, .card-intro-deck
     position: relative
+    cursor: pointer
+    overflow: hidden
     width: 80%
     padding: 10px
     max-width: 800px
@@ -165,6 +167,26 @@ h2
             transition: all ease-in-out 0.3s
             background-color: rgba($accent, 0.8)
             color: $black
+.card-intro-deck i
+    position: absolute
+    top: 50%
+    left: 50%
+    border-radius: 50%
+    background: $white
+    padding-left: 8px
+    box-shadow: 0 0 10px $shadow
+    font-size: 4rem
+    color: $accent
+    text-align: center
+    width: 60px
+    height: 60px
+    line-height: 60px
+    transform: translate(-50%, -50%) scale(0)
+    transition: all 300ms 0ms cubic-bezier(0.6, -0.28, 0.735, 0.045)
+.card-intro-deck:hover i
+    transform: translate(-50%, -50%) scale(1)
+    transition: all 300ms 100ms cubic-bezier(0.175, 0.885, 0.32, 1.275)
+
     #viewCard
         bottom: 10px
         right: 60px
