--- a/client/layouts/HomeLayout.html
+++ b/client/layouts/HomeLayout.html
@@ -10,28 +10,13 @@
             <div class="intro-text">
                 <h2>What is Study Smart?</h2>
                 <p>
-                    Study smart is a flash card base study tool with a twist!
+                    Study smart is a flash card & note taking based study tool with a twist!
                     Did you know that changing the font style and color periodically
                     helps improve your memory!?
                 </p>
                 <p>
-                    You make the flash cards and we take care of the rest!
+                    You put in the info and we take care of the rest!
                 </p>
-            </div>
-        </div>
-        <div class="card-example">
-            <div class="card">
-                <h2>These are smart flash cards</h2>
-                <p>
-                    What is the equation to find the slope?
-                </p>
-                <span>Your answer!!</span>
-                <div id="viewCard" class="button">
-                    <i class="fa fa-eye"></i>
-                </div>
-                <div id="nextCard" class="button">
-                    <i class="fa fa-arrow-right"></i>
-                </div>
             </div>
         </div>
         <!-- Personal Branding -->
