--- a/css/style.sass
+++ b/css/style.sass
@@ -52,7 +52,7 @@ h2
     background-image: url(../images/header-bkg.png)
     background-size: cover
     background-position: center
-    height: 25vh
+    height: 30vh
     position: relative
     display: flex
     align-items: center
@@ -71,7 +71,7 @@ h2
     h1
         font-size: 6rem
 .header
-    height: 10vh !important
+    height: 15vh !important
     background-color: $primary !important
     background-image: none
     box-shadow: 2px 2px 5px $shadow
@@ -104,12 +104,12 @@ h2
     position: absolute
 .intro-block
     display: flex
-    height: 20vh
+    height: 25vh
     align-items: center
     justify-content: center
     background-color: $primary
     text-align: center
-    padding: 20px
+    padding: 15px
     h2
         color: $white
         size: 1.8rem
@@ -122,6 +122,7 @@ h2
             weight: 300
 .intro-text
     max-width: 800px
+    padding: 2%
 .card-example
     display: flex
     flex-direction: row
@@ -153,7 +154,7 @@ h2
             weight: 300
             size: 2rem
     span
-        opacity: 0
+        opacity: 1
         font-size: 2rem
         margin-top: 20px
         text-align: center
@@ -244,3 +245,14 @@ h2
         background-color: rgba($accent, 0.8)
         box-shadow: 2px 2px 15px $shadow
         color: rgba($black, 0.8) !important
+.summary-wrapper
+    padding: 10px
+    display: flex
+    flex-direction: row
+    flex-wrap: wrap
+
+.deck-title
+    padding: 20px
+    font-size: 3rem
+    color: black !important
+    text-shadow: none
