--- a/css/style.css
+++ b/css/style.css
@@ -348,6 +348,56 @@ h2 {
   -webkit-flex-wrap: wrap;
       -ms-flex-wrap: wrap;
           flex-wrap: wrap; }
+  .summary-wrapper .card {
+    position: relative;
+    cursor: pointer;
+    overflow: hidden;
+    width: 80%;
+    padding: 10px;
+    max-width: 800px;
+    height: 300px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center; }
+    .summary-wrapper .card .reveal {
+      text-align: center;
+      font-size: 3rem;
+      background-color: #9BE893;
+      position: absolute;
+      left: 0;
+      right: 0;
+      top: 0;
+      bottom: 0;
+      z-index: 2;
+      margin-top: 100%;
+      opacity: 0;
+      -webkit-transition: all 0.3s ease;
+      transition: all 0.3s ease; }
+    .summary-wrapper .card .reveal-btn {
+      position: absolute;
+      background-color: rgba(155, 232, 147, 0.8);
+      width: 100%;
+      padding: 10px;
+      bottom: 0px;
+      left: 0;
+      right: 0;
+      text-align: center;
+      color: rgba(255, 255, 255, 0.8);
+      -webkit-transition: all 0.3s ease;
+      transition: all 0.3s ease; }
+      .summary-wrapper .card .reveal-btn:hover {
+        background-color: #9BE893;
+        color: #fff; }
 
 .deck-title {
   padding: 20px;
