working on javascript function to reveal individual card answers

--- a/client/layouts/DeckSingle.html
+++ b/client/layouts/DeckSingle.html
@@ -1,5 +1,7 @@
+
 <template name="DeckSingle">
     <h1 class="deck-title">{{flashcard.name}}</h1>
+    <span class="top"><i class="fa fa-arrow-up"></i></span>
     <div class="summary-wrapper">
         <div class="container">
             <div class="row">
