--- a/css/style.css
+++ b/css/style.css
@@ -340,14 +340,19 @@ h2 {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -webkit-flex-direction: row;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-flex-wrap: wrap;
-      -ms-flex-wrap: wrap;
-          flex-wrap: wrap; }
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center; }
   .summary-wrapper .card {
     position: relative;
     cursor: pointer;
@@ -356,6 +361,7 @@ h2 {
     padding: 10px;
     max-width: 800px;
     height: 300px;
+    margin: 15px;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
     display: -webkit-box;
     display: -webkit-flex;
@@ -398,6 +404,12 @@ h2 {
       .summary-wrapper .card .reveal-btn:hover {
         background-color: #9BE893;
         color: #fff; }
+
+.top {
+  position: fixed;
+  right: 30px;
+  font-size: 3rem;
+  padding: 15px; }
 
 .deck-title {
   padding: 20px;
